--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "id": "visual-tasks-board",
-  "name": "Visual Tasks Board",
+  "id": "mind-task",
+  "name": "MindTask",
   "version": "0.0.1",
   "minAppVersion": "1.0.0",
   "description": "Visualize and manage tasks on an interactive board",
